overflow fixed

--- a/styles/EventCards.module.css
+++ b/styles/EventCards.module.css
@@ -5,6 +5,7 @@
   height: 60vh;
   align-self: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .card {
