--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,11 @@ body {
   background-color: #0e0e0e;
   font-family: Saira Condensed;
   color: #f8d2d2;
-  max-height: 100%;
-  /* overflow: hidden; */
+  max-height: 100vh;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
 }
 
 a {
@@ -23,7 +26,7 @@ a {
   padding: 0;
   margin: 0;
   touch-action: manipulation;
-  /* overflow: hidden; */
+  outline: 1px solid red;
 }
 
 button {
